hphp/hack/test/typecheck/lambda/variadics/lambda_variadic_generic.php.like_types.exp
File "lambda_variadic_generic.php", line 27, characters 12-13:
Invalid return type (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 45-45:
Expected C
File "lambda_variadic_generic.php", line 11, characters 29-29:
But got dynamic because it is an unenforceable type
File "lambda_variadic_generic.php", line 30, characters 30-44:
Invalid return type (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 45-45:
Expected C
File "lambda_variadic_generic.php", line 11, characters 29-29:
But got dynamic because it is an unenforceable type
File "lambda_variadic_generic.php", line 35, characters 12-13:
Invalid return type (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 45-45:
Expected C
File "lambda_variadic_generic.php", line 11, characters 29-29:
But got dynamic because it is an unenforceable type
File "lambda_variadic_generic.php", line 38, characters 32-46:
Invalid return type (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 45-45:
Expected C
File "lambda_variadic_generic.php", line 11, characters 29-29:
But got dynamic because it is an unenforceable type
File "lambda_variadic_generic.php", line 38, characters 18-46:
Invalid argument (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 25-46:
Expected ~(function(A<C>...): C) because it is an unenforceable type
File "lambda_variadic_generic.php", line 38, characters 18-46:
But got (function(A $y...): C)
File "lambda_variadic_generic.php", line 40, characters 47-49:
No method 'bar' in C (did you mean 'foo'?) (Typing[4053])
File "lambda_variadic_generic.php", line 16, characters 37-37:
This is why I think it is an object of type C
File "lambda_variadic_generic.php", line 11, characters 29-29:
  via this generic T
File "lambda_variadic_generic.php", line 3, characters 7-7:
Declaration of C is here
File "lambda_variadic_generic.php", line 40, characters 30-51:
Invalid return type (Typing[4110])
File "lambda_variadic_generic.php", line 16, characters 45-45:
Expected C
File "lambda_variadic_generic.php", line 40, characters 30-51:
But got dynamic, the result of calling a dynamic type as a function
